--- a/Project 1 - Car Purchase Amount Predictions Using ANNs.ipynb
+++ b/Project 1 - Car Purchase Amount Predictions Using ANNs.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You are working as a car salesman and you would like to develop a model to predict the total dollar amount that customers are willing to pay given the following attributes: \n",
+    "We are working as a car salesman and you would like to develop a model to predict the total dollar amount that customers are willing to pay given the following attributes: \n",
     "- Customer Name\n",
     "- Customer e-mail\n",
     "- Country\n",
